# imagemetadata_rust_lambda

./: Cargo.toml  README.md
src/: main.rs
