[package]
name = "imagemetadata_rust_lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-lambda = "0.3.0"
aws-lambda-events = "0.7.0"
lambda-runtime = "0.3.2"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_xray = "0.48.0"
serde_json = "1.0.69"
simple_logger = "2.0.0"
log = "0.4.14"
tokio = { version = "1", features = ["macros"] }

